--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio for New Front-End Engineer SuJeong Kim"
     />
+    <meta name="author" content="SuJeong Kim" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>김수정 - 프론트엔드 개발자 포트폴리오</title>
